<resources>
    <string name="app_name">NUSWhere</string>

    <string name="title_activity_food">FoodActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="textview">TextView</string>
    <string name="search_bar1">Looking for food?</string>
    <string name="food2">Food &amp; Beverages</string>
    <string name="study2">Study Areas</string>
    <string name="map2">NUS Shuttle Bus</string>
    <string name="search2">Search NUS venues</string>
    <string name="backbutton">backButton</string>
    <string name="what_can_we_help_you_with_today">What can we help you with today?</string>
    <string name="where_are_you_headed">Where are you headed?</string>
    <string name="searchNUS">Explore NUS</string>
    <string name="homeBtn">homeBtn</string>
    <string name="foodBtn">foodBtn</string>
    <string name="studyBtn">studyBtn</string>
    <string name="busBtn">busBtn</string>
    <string name="mapBtn">mapBtn</string>
    <string name="noStar">blankStar</string>
    <string name="yesStar">filledStar</string>


    <string name="by_location">By Location</string>
    <string name="late_night_options">Late Night Food</string>
    <string name="bakery_cafes">Cafes &amp; Bakeries</string>
    <string name="food_stores">Food Stores</string>
    <string name="food_courts">Food Courts</string>
    <string name="all">All</string>

    <string name="food_stalls">Food Stalls</string>
    <string name="restaurants">Restaurants</string>
    <string name="marts">Convenience Stores</string>


    <string name="business1">Business</string>
    <string name="businessfood">Business</string>
    <string name="computing1">Computing</string>
    <string name="computingfood">Computing</string>
    <string name="engineering1">Engineering</string>
    <string name="engineeringfood">Engineering</string>
    <string name="fass1">FASS</string>
    <string name="fassfood">FASS</string>
    <string name="medicine1">Medicine</string>
    <string name="medicinefood">Medicine</string>
    <string name="science1">Science</string>
    <string name="sciencefood">Science</string>
    <string name="sde1">SDE</string>
    <string name="sdefood">SDE</string>
    <string name="utown1">UTown</string>
    <string name="utownfood">UTown</string>
    <string name="ystcm1">YSTCM</string>
    <string name="ystcmfood">YSTCM</string>

    <string name="school">school</string>
    <string name="foodcourt">foodcourt</string>
    <string name="foodstore">foodstore</string>
    <string name="foodstall">foodstall</string>
    <string name="restaurant1">restaurant</string>
    <string name="mart1">conveniencestore</string>
    <string name="cafebakery">cafeBakery</string>
    <string name="latenightfood">lateNightFood</string>

    <string name="map">map</string>
    <string name="bus1">bus</string>
    <string name="bus2">bus</string>
    <string name="busss">busss</string>
    <string name="study">study</string>
    <string name="food">food</string>
    <string name="supper">supper</string>
    <string name="business">Business</string>
    <string name="nuswhere">NUSWhere</string>
    <string name="mapppppp">mapppppp</string>
    <string name="search_bar">Search bar</string>
    <string name="place">Place</string>
    <string name="category">Category:</string>
    <string name="bus">bus</string>
    <string name="science">Science</string>
    <string name="enter">Enter</string>
    <string name="start_location">Start Location</string>
    <string name="destination">Destination</string>

    <string name="imagefood">imageFood</string>
    <string name="titlefood">Title: </string>
    <string name="location">Location: </string>
    <string name="halal">Halal Certified: </string>
    <string name="operatingHours">Term Time &amp; Vacation Operating Hours: </string>
    <string name="termTime">Term Time Operating Hours: </string>
    <string name="vacationTime">Vacation Time Operating Hours: </string>


    <string-array name="studyAreas">
        <item>BY FACULTY:</item>
        //position: 0

        <item>ARTS AND SOCIAL SCIENCES</item>
        // position: 1

        <item>BUSINESS</item>
        // position: 2

        <item>COMPUTING</item>
        // position: 3

        <item>DENTISTRY</item>
        // position: 4

        <item>DESIGN AND ENVIRONMENT</item>
        // position: 5

        <item>ENGINEERING</item>
        // position: 6

        <item>MEDICINE</item>
        // position: 7

        <item>MUSIC</item>
        // position: 8

        <item>SCIENCE</item>
        // position: 9

        <item>LIBRARIES:</item>
        //position: 10

        <item>CENTRAL LIBRARY</item>
        // position: 11
        <item>CHINESE LIBRARY</item>
        // position: 12
        <item>HON SUI SEN MEMORIAL LIBRARY</item>
        // position: 13
        <item>MEDICAL LIBRARY</item>
        // position: 14
        <item>MUSIC LIBRARY</item>
        // position: 15
        <item>SCIENCE LIBRARY</item>
        // position: 16
        <item>YALE-NUS LIBRARY</item>
        // position: 17

        <item>OTHERS:</item>
        //position: 18

        <item>UTOWN</item>
        // position: 19
    </string-array>

    <string name="clb1">CENTRAL LIBRARY</string>
    <string name="chilib1">CHINESE LIBRARY</string>
    <string name="bizlib1">HON SUI SEN MEMORIAL LIBRARY</string>
    <string name="medlib1">MEDICAL LIBRARY</string>
    <string name="musiclib1">MUSIC LIBRARY</string>
    <string name="scilib">SCIENCE LIBRARY</string>
    <string name="yalelib">YALE-NUS LIBRARY</string>

    <string name="studySpotName">Name</string>
    <string name="studySpotLocation">Location: </string>
    <string name="studySpotSeat">Seating Capacity: </string>
    <string name="studySpotBus">Nearby Bus Stops: </string>
    <string name="studySpotHours">Opening Hours: </string>
    <string name="studySpotPhotos">More Photos: </string>


    <string name="busbackground">Bus Background>Map</string>
    <string name="businputrect">Bus Input Rectangle</string>
    <string name="busmapbutton">Bus Map Button</string>
    <string name="gmapbutton">GMap Button</string>
    <string name="address1">Address: </string>
    <string name="busstop1">Nearby Bus Stops: </string>
    <string name="opHours1">Opening Hours: </string>
    <string name="more1">More Photos: </string>
    <string name="placeholder1">PlaceHolder</string>
    <string name="busMap">TODO</string>
    <string name="gMap">TODO</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="noHeart" />

    <string name="map_key" translatable="false">AIzaSyDeHyGlJ-VsnMRksoEffv90bRZmo_uWJKw</string>


    <string name="eta">Estimated Travel Time: </string>
    <string name="busCircle">Bus Circle</string>
    <string name="busDirection">Directions</string>
    <string name="notice">Results are estimates and do not account for bus waiting time.</string>
    <string name="viewMap">View Bus Map ></string>


</resources>
