<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food.FacultyFoodActivity">

    <include layout="@layout/food_top_bar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/bizCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bizFoodImg"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:background="@drawable/business"
                android:contentDescription="@string/business1" />

            <TextView
                android:id="@+id/bizFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/businessfood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/comCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toEndOf="@id/bizCardView"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/comFoodImg"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:background="@drawable/com"
                android:contentDescription="@string/computing1" />

            <TextView
                android:id="@+id/comFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/computingfood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/engineCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toEndOf="@id/comCardView"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/engineFoodImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp"
                android:background="@drawable/engine"
                android:contentDescription="@string/engineering1" />

            <TextView
                android:id="@+id/engineFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/engineeringfood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fassCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bizCardView">

            <ImageView
                android:id="@+id/fassFoodImg"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/fass"
                android:contentDescription="@string/fass1" />

            <TextView
                android:id="@+id/fassFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/fassfood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/medCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toEndOf="@id/fassCardView"
            app:layout_constraintTop_toBottomOf="@id/comCardView">

            <ImageView
                android:id="@+id/medFoodImg"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/med"
                android:contentDescription="@string/medicine1" />

            <TextView
                android:id="@+id/medFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/medicinefood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sciCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toEndOf="@id/medCardView"
            app:layout_constraintTop_toBottomOf="@id/engineCardView">

            <ImageView
                android:id="@+id/sciFoodImg"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:background="@drawable/science"
                android:contentDescription="@string/science1" />

            <TextView
                android:id="@+id/sciFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/science"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sdeCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fassCardView">

            <ImageView
                android:id="@+id/sdeFoodImg"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/sde"
                android:contentDescription="@string/sde1" />

            <TextView
                android:id="@+id/sdeFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/sdefood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/utownCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toEndOf="@id/sdeCardView"
            app:layout_constraintTop_toBottomOf="@id/medCardView">

            <ImageView
                android:id="@+id/utownFoodImg"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/utown"
                android:contentDescription="@string/utown1" />

            <TextView
                android:id="@+id/utownFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/utownfood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ystCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintStart_toEndOf="@id/utownCardView"
            app:layout_constraintTop_toBottomOf="@id/sciCardView">

            <ImageView
                android:id="@+id/ystFoodImg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/ystcm"
                android:contentDescription="@string/ystcm1" />

            <TextView
                android:id="@+id/ystFoodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/ystcmfood"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <include layout="@layout/back_button_layout"/>
    <include layout="@layout/bottom_bar_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>