<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodStoreActivity">


    <TextView
        android:id="@+id/foodSearch"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:background="@drawable/main_top_rect"
        android:elevation="23dp"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:paddingTop="17dp"
        android:paddingBottom="17dp"
        android:text="@string/search_bar1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/foodBackBtn"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="86dp"
        android:background="@drawable/back"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/foodStallCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/foodStallFoodImg"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:background="@drawable/foodstall"
                android:contentDescription="@string/foodstall" />

            <TextView
                android:id="@+id/foodStallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/food_stalls"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/restaurantCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/foodStallCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/restaurantFoodImg"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/restaurant"
                android:contentDescription="@string/restaurant1" />

            <TextView
                android:id="@+id/restaurantText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/restaurants"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/martCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/restaurantCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/martFoodImg"
                android:layout_width="59dp"
                android:layout_height="59dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:background="@drawable/conveniencestore"
                android:contentDescription="@string/mart1" />

            <TextView
                android:id="@+id/martText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/marts"
                android:textAlignment="center"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@drawable/main_bottom_rect"
        android:elevation="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="302dp"
        android:layout_height="82dp"
        android:background="@android:color/transparent"
        android:elevation="23dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/foodBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/food"
            android:contentDescription="@string/foodBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/studyBtn"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:background="@drawable/study"
            android:contentDescription="@string/studyBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/foodBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/busBtn"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:background="@drawable/bus"
            android:contentDescription="@string/busBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/studyBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/mapBtn"
            android:layout_width="50dp"
            android:layout_height="46dp"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:background="@drawable/map"
            android:contentDescription="@string/mapBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/busBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>