<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="195dp"
    android:weightSum="2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/imagefood"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="180dp">

            <TextView
                android:id="@+id/foodTitleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/montserrat"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/titlefood"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/foodLocationId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/location"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/foodHalalId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="1dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/halal"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/foodOperatingHoursId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/operatingHours"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@drawable/grey_divider"/>

</LinearLayout>
